# 32blit-stagelib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StageLibConfig.cmake
.github/workflows/: build.yml
example/: CMakeLists.txt  metadata.yaml
example/src/: Main.cpp  StageExample.cpp  StageExample.hpp
stagelib/: CMakeLists.txt
stagelib/src/: ButtonState.hpp  FancyText.cpp  FancyText.hpp  Message.hpp  Mixins.cpp  Mixins.hpp  SoundMgr.cpp  SoundMgr.hpp  Stage.cpp  Stage.hpp
